<resources>
    <string name="app_name">Outfit Generator</string>
    <string name="random_button">Generate Outfit</string>
    <string name="save_button">Save Item</string>
    <string name="cancel_button">Cancel</string>

    <string name="collection_view">Closet</string>
    <string name="save_outfit">Save to closet</string>

    <string name="upload">Upload</string>
    <string name="clothing_title_hint">Item name</string>
    <string name="shoes">Shoes</string>
    <string name="pants">Pants</string>
    <string name="shirt">Shirt</string>
    <string name="hat">Hat</string>
    <string name="clothing_tag">Clothing Tag</string>
    <string name="clothing_title">Clothing Title</string>
    <string name="clothing_image">clothing_image</string>

    <string-array name="dropdownmenu">
        <item>Hat</item>
        <item>Shirt</item>
        <item>Pants</item>
        <item>Shoes</item>
    </string-array>


</resources>